# Aind.Behavior.DynamicForaging

./: .buildinfo  .gitignore  Aind.Behavior.DynamicForaging.sln  README.md  api.html  api.rig.html  api.session.html  api.task_logic.html  dataset.html  genindex.html  index.html  json-schemas.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.cfg
.doctrees/: api.doctree  api.rig.doctree  api.session.doctree  api.task_logic.doctree  dataset.doctree  environment.pickle  index.doctree  json-schemas.doctree
.github/workflows/: dynamic-foraging-cicd.yml  run_pull_request_tests.yml
_sources/: api.task_logic.rst.txt  index.rst.txt  json-schemas.rst.txt
_static/: dataset.html  documentation_options.js
bonsai/: Bonsai.config
docs/: api.rig.rst  api.task_logic.rst  conf.py  index.rst  json-schemas.rst
examples/: couple_baiting_curriculum.py  coupled_trial_generator.py  examples.py  rig.py  session.py  task_logic.py  uncoupled_trial_generator.py  warmup_trial_generator.py
schema/: aind_behavior_dynamic_foraging.json  coupled_baiting.json  uncoupled.json  uncoupled_baiting.json
scripts/: aind-launcher.py  walk_through_session.py
src/: Extensions.csproj  main.bonsai  test_deserialization.bonsai  test_ethogram.bonsai  test_python.bonsai  test_visualizer.bonsai
src/DataSchemas/: aind_behavior_dynamic_foraging.json
src/DataSchemas/aind_behavior_dynamic_foraging/: task_logic.py
src/Extensions/: AindBehaviorDynamicForaging.Generated.cs  AindManipulator.bonsai  AutoWaterGlobalState.cs  AutoWaterState.cs  CalculateSpoutPositions.cs  CreateNullableBoolean.cs  DeserializeFromPyObject.cs  DetermineReward.cs  Hardware.bonsai  HarpBehavior.bonsai  HarpLicketySplitLeft.bonsai  HarpLicketySplitRight.bonsai  HarpSoundCard.bonsai  HarpSoundCardGetMetadata.bonsai  InlineSoftwareEvent.bonsai  InvokeMethod.cs  Logging.bonsai  ModifyTrialWithAutoWaterState.cs  OperationControl.bonsai  ResolveGenerator.cs  SecondaryReinforcerDispatcher.bonsai  SoftwareEventVisualizer.cs  SoftwareEventVisualizerBuilder.cs  SpinnakerCameraControllerSaturationVisualizer.bonsai  SpoutOffsetControl.bonsai  TaskEngine.bonsai  TrialOutcomeVisualizer.cs  TrialOutcomeVisualizerBuilder.cs  TrialTableVisualizer.cs  TrialTableVisualizerBuilder.cs  ValveUi.bonsai  Visualizers.bonsai  bonsai.py
src/TrialGenerator/: trial_generator.py
src/aind-behavior-dynamic-foraging-curricula/examples/: coupled_baiting_curriculum.py
src/aind-behavior-dynamic-foraging-curricula/src/aind_behavior_dynamic_foraging_curricula/: metrics.py  test.py
src/aind-behavior-dynamic-foraging-curricula/tests/: test_metrics.py
src/aind_behavior_dynamic_foraging/: __init__.py  cli.py  regenerate.py  rig.py  task_logic.py
src/aind_behavior_dynamic_foraging/CurriculumManager/: curriculum_schedule_mapper.py  main.py  metrics.py  trainer.py
src/aind_behavior_dynamic_foraging/CurriculumManager/curriculums/: coupled_baiting_1p0.py  coupled_baiting_2p0.py  coupled_baiting_2p1.py  coupled_baiting_2p2.py  coupled_baiting_2p3.py  uncoupled_baiting_2p3.py  uncoupled_no_baiting.py  uncoupled_no_baiting_2p3.py  uncoupled_no_baiting_2p3p1rwdDelay159.py  uncoupled_no_baiting_rd_2p3p1.py  uncoupled_no_baiting_rwdDelay_2p3p1.py
src/aind_behavior_dynamic_foraging/DataSchemas/: OperationalControl.py  ephys.py  fiber_photometry.py  launcher.py  operation_control.py  optogenetics.py  regenerate.py  rig.py  task_logic.py
src/aind_behavior_dynamic_foraging/curricula/: __init__  coupled_baited.py  coupled_baiting_2p3.py  metrics.py
src/aind_behavior_dynamic_foraging/curricula/coupled_baiting/: __init__.py  curriculum.py  stages.py
src/aind_behavior_dynamic_foraging/data_contract/: __init__.py  _dataset.py  utils.py
src/aind_behavior_dynamic_foraging/data_qc/: __init__.py  _suite.py
src/aind_behavior_dynamic_foraging/task_logic/: __init__.py  trial_models.py
src/aind_behavior_dynamic_foraging_curricula/: pyproject.toml
src/aind_behavior_dynamic_foraging_curricula/src/aind_behavior_dynamic_foraging_curricula/: metrics.py  utils.py
src/aind_behavior_dynamic_foraging_curricula/tests/: test_coupled_baiting.py
tests/: mock_curriculum_manager.py  mock_databases.py  test_bonsai.py  test_cirriculums.py  test_curriculums.py  test_trainer.py  test_trainer_server.py
tests/curricula/: test_coupled_baiting.py
tests/resources/: Coupled Baiting_curriculum_v2.3_schema_v1.0.json  Uncoupled Baiting_curriculum_v2.3_schema_v1.0.json  Uncoupled Without Baiting_curriculum_v2.3.0_schema_v1.0.json  Uncoupled Without Baiting_curriculum_v2.3.1rwdDelay159_schema_v1.0.json  docdb_session.json  slims_attachment.json  slims_attachment_content.json  slims_behavior_session.json  slims_mouse.json
tests/trial_generators/: test_base_coupled_trial_generator.py  test_block_based_trial_generator.py  test_calculate_bias.py  test_composite_trial_generator.py  test_couple_trial_generator.py  test_coupled_trial_generator.py  test_integration_test_trial_generator.py  test_uncoupled_trial_generator.py  test_warmup_trial_generator.py  util.py
workspace/aind_behavior_dynamic_foraging_curricula/: pyproject.toml
workspace/aind_behavior_dynamic_foraging_curricula/tests/: test_metrics.py  test_uncoupled_baiting.py
workspace/aind_behavior_dynamic_foraging_metadata_mapper/: pyproject.toml
workspaces/aind-behavior-dynamic-foraging-curricula/: README.md  pyproject.toml
workspaces/aind-behavior-dynamic-foraging-curricula/examples/: couple_baiting_curriculum.py  coupled_baiting_curriculum.py
workspaces/aind-behavior-dynamic-foraging-curricula/tests/: test_coupled_baiting.py  test_metrics.py
(+41 files in other folders)
