[project]
name = "aind-behavior-dynamic-foraging"
description = "A library that defines AIND data schema for the Aind Behavior Dynamic Foraging experiment."
authors = [ {name = "Micah Woodard", email = "micah.woodard@alleninstitute.org"},
            {name = "Bruno Cruz", email = "bruno.cruz@alleninstitute.org"}]

license = {text = "MIT"}
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
]
readme = "README.md"
dynamic = ["version"]

dependencies = [
    "aind_behavior_services==0.9.0",
    "aind-auto-train@git+https://github.com/AllenNeuralDynamics/aind-foraging-behavior-bonsai-automatic-training.git@main",
    "aind-behavior-curriculum @ git+https://github.com/AllenNeuralDynamics/aind-behavior-curriculum@main",
    "coverage",
    "aind-slims-api",
    "aind_data_access_api==0.17.1",
    "pymongo",
    "pydantic==2.10.6"
]


