[build-system]
requires = ["uv_build>=0.8.22"]
build-backend = "uv_build"

[project]
name = "aind-behavior-dynamic-foraging"
description = "A library that defines AIND data schema for the Aind Behavior Dynamic Foraging experiment."
authors = [
    {name = "Micah Woodard", email = "micah.woodard@alleninstitute.org"},
    {name = "Bruno Cruz", email = "bruno.cruz@alleninstitute.org"}
    ]
license = "MIT"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Operating System :: Microsoft :: Windows",
]
version = "0.0.2rc4"
readme = {file = "README.md", content-type = "text/markdown"}

dependencies = [
    "aind_behavior_services<0.14",
    "pydantic-settings",
]

[project.urls]
Documentation = "https://allenneuraldynamics.github.io/Aind.Behavior.DynamicForaging/"
Repository = "https://github.com/AllenNeuralDynamics/Aind.Behavior.DynamicForaging/"
Issues = "https://github.com/AllenNeuralDynamics/Aind.Behavior.DynamicForaging/issues"
Changelog = "https://github.com/AllenNeuralDynamics/Aind.Behavior.DynamicForaging/releases"

[project.optional-dependencies]

data = ["contraqctor>=0.5.3"]

[dependency-groups]

dev = [
    "ruff",
    "codespell",
    "aind-behavior-dynamic-foraging[data]",
]

docs = [
    'Sphinx',
    'furo',
    'sphinx-jinja',
    'autodoc_pydantic[erdantic]',
    'myst_parser',
    'sphinx-jsonschema',
]

[project.scripts]
dynamic-foraging = "aind_behavior_dynamic_foraging.cli:main"

[tool.ruff]
line-length = 120
target-version = 'py311'

[tool.ruff.lint]
extend-select = ['Q', 'RUF100', 'C90', 'I']
extend-ignore = []
mccabe = { max-complexity = 14 }
pydocstyle = { convention = 'google' }

[tool.codespell]
skip = '.git,*.pdf,*.svg,./bonsai,*.bonsai,./docs/_build,uv.lock,*Generated.cs'
ignore-words-list = 'nd'

[tool.uv]
default-groups = ['dev']
required-version = '>=0.8.4'

