[build-system]
requires = ["uv_build>=0.8.22"]
build-backend = "uv_build"

[project]
name = "aind-behavior-dynamic-foraging-curricula"
description = "A library of curricula for the Dynamic Foraging task."
authors = [
    {name = "Bruno Cruz", email = "bruno.cruz@alleninstitute.org"},
    {name = "Micah Woodard", email = "micah.woodard@alleninstitute.org"}
    ]
license = "MIT"
version = "0.2.1"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: Microsoft :: Windows",
]
readme = {file = "README.md", content-type = "text/markdown"}

dependencies = [
    "aind-behavior-curriculum >= 0.0.38",
    "numpy>=2.4.2",
    "pydantic-settings",
    "aind-behavior-dynamic-foraging==0.0.2rc24"
]

[tool.uv.sources]
aind-behavior-dynamic-foraging = { workspace = true }

[dependency-groups]

dev = [
    'ruff',
    'pytest',
    'pytest-cov',
    'codespell',
]

docs = [
    'mkdocs',
    'mkdocs-material',
    'mkdocstrings[python]',
    'pymdown-extensions',
    'ruff',
]

[tool.uv]
default-groups = ['dev']

[tool.ruff]
line-length = 120
target-version = 'py311'

[tool.ruff.lint]
extend-select = ['Q', 'RUF100', 'C90', 'I']
extend-ignore = []
mccabe = { max-complexity = 14 }
pydocstyle = { convention = 'google' }

[tool.codespell]
skip = '.git,*.pdf,*.svg,uv.lock'
ignore-words-list = 'nd'

[tool.pytest.ini_options]
addopts = "--strict-markers --tb=short --cov=src --cov-report=term-missing --cov-fail-under=70"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[project.scripts]
curriculum = "aind_behavior_dynamic_foraging_curricula.cli:main"
